--- a/po/wesnoth-lib/cs.po
+++ b/po/wesnoth-lib/cs.po
@@ -1,7 +1,7 @@
 # translation of wesnoth-lib.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2004 - 2018 Wesnoth development team
+# Copyright (C) 2004 - 2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <hrubymar10@gmail.com>,
@@ -11,14 +11,14 @@
 # Oto 'tapik' Buchta <tapik@buchtovi.cz>, 2005 - 2007.
 # Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2011.
 # Jan Dědič <jan.dedic@gmail.com>, 2014.
-# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2018.
+# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 21:30+0300\n"
-"PO-Revision-Date: 2018-09-14 22:43+0200\n"
+"PO-Revision-Date: 2019-02-15 22:53+0100\n"
 "Last-Translator: Martin Hrubý (hrubymar10) <hrubymar10@gmail.com>\n"
 "Language-Team: Český <hrubymar10@gmail.com>\n"
 "Language: cs\n"
@@ -26,7 +26,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [terrain_type]: id=farmer-fence  # AI-animal-proof fences from first scenario
 #. [terrain_type]: id=fence
@@ -255,19 +255,14 @@ msgstr "Pouštní písky"
 
 #. [terrain_type]: id=desert
 #: data/core/terrain.cfg:298
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Deserts'</italic> have a somewhat different composition "
-#| "than small sand pits or beaches, however for gameplay purposes they are "
-#| "identical. See <ref>dst='terrain_sand' text='sand'</ref>."
 msgid ""
 "<italic>text='Deserts'</italic> have a somewhat different composition than "
 "small sand pits or beaches, however for gameplay purposes they are "
 "identical. See <ref>dst='..terrain_sand' text='sand'</ref>."
 msgstr ""
 "<italic>text='Pouště'</italic>mají poněkud odlišné složení než malé jámy s "
-"pískem nebo pláže, hru ale ovlivňují obdobně. Podívejte se na "
-"<ref>dst='terrain_sand' text='Písek'</ref>"
+"pískem nebo pláže, hru ale ovlivňují obdobně. Podívejte se na <ref>dst=‘.."
+"terrain_sand' text='Písek'</ref>"
 
 #. [terrain_type]: id=sand_beach
 #. [terrain_type]: id=sand
@@ -309,6 +304,8 @@ msgid ""
 "A welcome sight to any traveler, an oasis allows units to heal as if "
 "stationed in a village, but provides no income or defensive advantage."
 msgstr ""
+"Oáza je uvítána každým cestovatelem, umožňuje jednotkám uzdravit se jako ve "
+"vesnici, ale neposkytuje žádný příjem ani obranou výhodu."
 
 #. [terrain_type]: id=sand_rubble
 #: data/core/terrain.cfg:332
@@ -870,7 +867,6 @@ msgstr "Přímá bílá zeď"
 
 #. [terrain_type]: id=wall_stone_clean
 #: data/core/terrain.cfg:1232
-#, fuzzy
 msgid "Clean Stone Wall"
 msgstr "Čistá kamenná zeď"
 
@@ -1182,10 +1178,8 @@ msgstr "Ležení"
 
 #. [terrain_type]: id=encampment_ruin
 #: data/core/terrain.cfg:1874
-#, fuzzy
-#| msgid "Encampment"
 msgid "Ruined Encampment"
-msgstr "Ležení"
+msgstr "Ruiny tábora"
 
 #. [terrain_type]: id=encampment_snow
 #: data/core/terrain.cfg:1886
@@ -1235,14 +1229,12 @@ msgstr "Zasněžený lidský hrad"
 #. [terrain_type]: id=elven_castle
 #: data/core/terrain.cfg:1945
 msgid "Elven Castle"
-msgstr "Elfská tvrz"
+msgstr "Elfský hrad"
 
 #. [terrain_type]: id=elven_castle_ruin
 #: data/core/terrain.cfg:1957
-#, fuzzy
-#| msgid "Elven Castle"
 msgid "Elven Castle Ruin"
-msgstr "Elfská tvrz"
+msgstr "Ruiny elfského hradu"
 
 #. [terrain_type]: id=dwarven_castle
 #: data/core/terrain.cfg:1969
@@ -1285,24 +1277,18 @@ msgstr "Zřícený pouštní hrad"
 
 #. [terrain_type]: id=troll_encampment
 #: data/core/terrain.cfg:2043
-#, fuzzy
-#| msgid "Tall Encampment Keep"
 msgid "Troll Encampment"
-msgstr "Vysoká tvrz ležení"
+msgstr "Trolské ležení"
 
 #. [terrain_type]: id=aquatic_camp
 #: data/core/terrain.cfg:2055
-#, fuzzy
-#| msgid "Encampment"
 msgid "Aquatic Encampment"
-msgstr "Ležení"
+msgstr "Vodní ležení"
 
 #. [terrain_type]: id=aquatic_castle
 #: data/core/terrain.cfg:2068
-#, fuzzy
-#| msgid "Human Castle"
 msgid "Aquatic Castle"
-msgstr "Lidský hrad"
+msgstr "Vodní hrad"
 
 #. [terrain_type]: id=encampment_keep
 #. [terrain_type]: id=encampment_keep_tall
@@ -1317,10 +1303,8 @@ msgstr "Tvrz ležení"
 
 #. [terrain_type]: id=encampment_ruin_keep
 #: data/core/terrain.cfg:2096
-#, fuzzy
-#| msgid "Encampment Keep"
 msgid "Ruined Encampment Keep"
-msgstr "Tvrz ležení"
+msgstr "Zřícená tvrz ležení"
 
 #. [terrain_type]: id=encampment_keep_tall
 #: data/core/terrain.cfg:2109
@@ -1363,29 +1347,27 @@ msgstr "Zasněžená skřetí tvrz"
 #. [terrain_type]: id=human_keep
 #: data/core/terrain.cfg:2161
 msgid "Human Castle Keep"
-msgstr "Lidská tvrz"
+msgstr "Lidská hradní tvrz"
 
 #. [terrain_type]: id=snow_keep
 #: data/core/terrain.cfg:2174
 msgid "Snowy Human Castle Keep"
-msgstr "Zasněžená lidská tvrz"
+msgstr "Zasněžená lidská hradní tvrz"
 
 #. [terrain_type]: id=elven_keep
 #: data/core/terrain.cfg:2187
 msgid "Elven Castle Keep"
-msgstr "Elfská tvrz"
+msgstr "Elfská hradní tvrz"
 
 #. [terrain_type]: id=elven_keep_ruin
 #: data/core/terrain.cfg:2200
-#, fuzzy
-#| msgid "Elven Castle Keep"
 msgid "Elven Keep Ruin"
-msgstr "Elfská tvrz"
+msgstr "Zřícená elfská tvrz"
 
 #. [terrain_type]: id=dwarven_keep
 #: data/core/terrain.cfg:2213
 msgid "Dwarven Castle Keep"
-msgstr "Trpasličí tvrz"
+msgstr "Trpasličí hradní tvrz"
 
 #. [terrain_type]: id=ruined_keep
 #. [terrain_type]: id=sunken_keep
@@ -1404,12 +1386,12 @@ msgstr "Tvrz zříceného lidského hradu"
 #. [terrain_type]: id=sunken_keep
 #: data/core/terrain.cfg:2239
 msgid "Sunken Human Castle Keep"
-msgstr "Potopená lidská tvrz"
+msgstr "Potopená lidská hradní tvrz"
 
 #. [terrain_type]: id=swamp_keep
 #: data/core/terrain.cfg:2252
 msgid "Swamp Human Castle Keep"
-msgstr "Mokřinná lidská tvrz"
+msgstr "Bažinná lidská hradní tvrz"
 
 #. [terrain_type]: id=desert_keep
 #: data/core/terrain.cfg:2265
@@ -1423,17 +1405,13 @@ msgstr "Zřícená pouštní tvrz"
 
 #. [terrain_type]: id=merman_campkeep
 #: data/core/terrain.cfg:2291
-#, fuzzy
-#| msgid "Tall Encampment Keep"
 msgid "Aquatic Encampment Keep"
-msgstr "Vysoká tvrz ležení"
+msgstr "Tvrz vodního ležení"
 
 #. [terrain_type]: id=troll_campkeep
 #: data/core/terrain.cfg:2304
-#, fuzzy
-#| msgid "Tall Encampment Keep"
 msgid "Troll Encampment Keep"
-msgstr "Vysoká tvrz ležení"
+msgstr "Tvrz trolského ležení"
 
 #. [terrain_type]: id=merman_castlekeep
 #: data/core/terrain.cfg:2317
@@ -2564,8 +2542,6 @@ msgstr "Obtížnost"
 
 #. [scroll_label]: id=message
 #: data/gui/window/campaign_difficulty.cfg:73
-#, fuzzy
-#| msgid "Select difficulty level:"
 msgid "Select difficulty:"
 msgstr "Vyber si obtížnost:"
 
@@ -5323,7 +5299,7 @@ msgstr "HP"
 #. [toggle_button]: id=sort_2
 #: data/gui/window/unit_list.cfg:149 data/gui/window/unit_recall.cfg:61
 msgid "Lvl"
-msgstr ""
+msgstr "Úr"
 
 #. [toggle_button]: id=sort_5
 #. [toggle_button]: id=sort_3
@@ -5458,10 +5434,8 @@ msgid "The maximum text width is less than 1."
 msgstr "Maximální šířka textu je menší než 1."
 
 #: src/font/text.cpp:761
-#, fuzzy
-#| msgid "The text contains invalid markup: "
 msgid "The text contains invalid Pango markup: "
-msgstr "Text obsahuje neplatné značky: "
+msgstr "Text obsahuje neplatné Pango značky: "
 
 #. TRANSLATORS: Formats a two-element conjunctive list.
 #: src/formula/string_utils.cpp:251
@@ -5729,7 +5703,7 @@ msgstr "vzestupně"
 #. TRANSLATORS: Sorting order of dates, oldest first
 #: src/gui/dialogs/addon/manager.cpp:361
 msgid "oldest to newest"
-msgstr ""
+msgstr "nejstarší po nejnovější"
 
 #: src/gui/dialogs/addon/manager.cpp:364
 msgid "descending"
@@ -5738,7 +5712,7 @@ msgstr "sestupně"
 #. TRANSLATORS: Sorting order of dates, newest first
 #: src/gui/dialogs/addon/manager.cpp:366
 msgid "newest to oldest"
-msgstr ""
+msgstr "nejnovější po nejstarší"
 
 #: src/gui/dialogs/addon/manager.cpp:384 src/gui/dialogs/chat_log.cpp:416
 #: src/gui/dialogs/game_cache_options.cpp:105
@@ -5757,7 +5731,7 @@ msgstr "Zpět na seznam"
 
 #: src/gui/dialogs/addon/manager.cpp:464
 msgid "An error occurred while downloading the add-ons list from the server."
-msgstr ""
+msgstr "Při stahování seznamu rozšíření ze serveru došlo k chybě."
 
 #: src/gui/dialogs/addon/manager.cpp:500
 msgid "No Add-ons Available"
@@ -5772,10 +5746,12 @@ msgid ""
 "The following add-on appears to have publishing or version control "
 "information stored locally, and will not be removed:"
 msgstr ""
+"Následující rozšíření má zřejmě informace pro publikaci nebo správu verzí a "
+"nebude proto odstraněno:"
 
 #: src/gui/dialogs/addon/manager.cpp:683
 msgid "The following add-on could not be deleted properly:"
-msgstr ""
+msgstr "Následující rozšíření nebylo možno správně odstranit:"
 
 #: src/gui/dialogs/addon/manager.cpp:729
 msgid "Warning"
@@ -5968,10 +5944,8 @@ msgid "The game data cache could not be purged."
 msgstr "Herní cache nemohla být vyčištěna."
 
 #: src/gui/dialogs/game_load.cpp:264
-#, fuzzy
-#| msgid "The selected game has no sides!"
 msgid "The selected file is corrupt: "
-msgstr "Vybraná hra nemá žádné strany!"
+msgstr "Vybraný soubor je poškozen: "
 
 #: src/gui/dialogs/game_load.cpp:343
 msgid "(Invalid)"
@@ -6431,6 +6405,9 @@ msgid ""
 "\n"
 "Try to save the screenshot as PNG instead."
 msgstr ""
+"Nepodporovaný formát obrázku.\n"
+"\n"
+"Zkus místo toho uložit snímek obrazovky jako PNG."
 
 #: src/gui/dialogs/statistics_dialog.cpp:64
 msgid "All Scenarios"
@@ -6650,7 +6627,7 @@ msgstr "Neznámé id pro uzel stromového seznamu."
 
 #: src/gui/widgets/unit_preview_pane.cpp:135
 msgid "Resistances: "
-msgstr ""
+msgstr "Odolnosti: "
 
 #: src/gui/widgets/unit_preview_pane.cpp:137
 msgid "(Att / Def)"
@@ -6797,7 +6774,7 @@ msgstr "Vybrat/Pohnout/Zaútočit"
 
 #: src/hotkey/hotkey_command.cpp:78
 msgid "Touch"
-msgstr ""
+msgstr "Dotek"
 
 #: src/hotkey/hotkey_command.cpp:79
 msgid "Animate Map"
