updated Ukrainian translation

--- a/po/wesnoth-units/uk.po
+++ b/po/wesnoth-units/uk.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:27 UTC\n"
-"PO-Revision-Date: 2019-02-01 16:34+0200\n"
+"PO-Revision-Date: 2019-02-03 09:24+0200\n"
 "Last-Translator: AncientGeneral <greatgeneral12 {AT} gmail.com>\n"
 "Language-Team: \n"
 "Language: uk\n"
@@ -3805,7 +3805,7 @@ msgstr "метальні ножі"
 #. [female]
 #: data/core/units/humans/Outlaw_Assassin.cfg:101
 msgid "female^Assassin"
-msgstr "Жінка вбивця"
+msgstr "Вбивця"
 
 #. [unit_type]: id=Bandit, race=human
 #: data/core/units/humans/Outlaw_Bandit.cfg:4
@@ -3830,7 +3830,7 @@ msgstr ""
 #. [unit_type]: id=Footpad, race=human
 #: data/core/units/humans/Outlaw_Footpad.cfg:4
 msgid "Footpad"
-msgstr "Побігайко"
+msgstr "Розбишака"
 
 #. [unit_type]: id=Footpad, race=human
 #: data/core/units/humans/Outlaw_Footpad.cfg:19
@@ -3842,7 +3842,7 @@ msgid ""
 "their inferior weaponry they are quite good at harrying their enemies, "
 "especially under cover of darkness."
 msgstr ""
-"Цих дрібних злочинців їх старші товариші іронічно називають ‘побігайками’ за "
+"Цих дрібних злочинців їх старші товариші іронічно називають ‘розбишаками’ за "
 "те, що ті виконують метушливу роботу, часто виступають кур'єрами та "
 "розвідниками. Незважаючи на мізерне озброєння, витривалість і швидкість "
 "дозволяють їм бути корисними в бою. Вони дуже добре непокоять супротивників, "
@@ -3851,7 +3851,7 @@ msgstr ""
 #. [female]
 #: data/core/units/humans/Outlaw_Footpad.cfg:87
 msgid "female^Footpad"
-msgstr "Побігайка"
+msgstr "Розбишака"
 
 #. [unit_type]: id=Fugitive, race=human
 #: data/core/units/humans/Outlaw_Fugitive.cfg:5
@@ -4827,7 +4827,7 @@ msgid ""
 "encounter with their bare fists. This is enough to keep even the doubtful "
 "from venturing too far onto the mountains they are said to inhabit."
 msgstr ""
-"Небагато відомо про Єті, мавпоподібних істот, що живуть серед віддалених і "
+"Небагато відомо про єті, мавпоподібних істот, що живуть серед віддалених і "
 "вкритих снігом скель. Мало хто бачив хоча б одного, тож їх існування "
 "ставиться під сумніви. Тим не менше, більшість джерел погоджуються на "
 "декількох пунктах — білі, повільні та примітивні єті надзвичайно живучі і "
