updated French translation

--- a/po/wesnoth-sotbe/fr.po
+++ b/po/wesnoth-sotbe/fr.po
@@ -7,13 +7,13 @@
 # French Wesnoth translation team <wesnoth@ml.free.fr>, 2004.
 # Clément Cunin <clement_point_cunin_at_free_point_fr>, 2004.
 # Gérard Bodin <gbodin.qc@gmail.com>, 2018.
-#
+# Mathieu Guilbaud <mathieu@guim.info>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: Son_of_the_Black_Eye-1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-06-01 21:12-0400\n"
+"PO-Revision-Date: 2019-02-22 13:51+0100\n"
 "Last-Translator: Gérard Bodin <gbodin.qc@gmail.com>\n"
 "Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 1.8.11\n"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:9
@@ -469,36 +469,26 @@ msgstr "Vaincre Lanbec'h"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:31
-#, fuzzy
-#| msgid "Resist until your people are ready to go (Turn 12)"
 msgid "Resist until your people are ready to go (turn 12)"
 msgstr "Résister jusqu'à ce que vos gens soient prêts à fuir (tour 12)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:34
-#, fuzzy
-#| msgid "Resist until your people are ready to go (Turn 13)"
 msgid "Resist until your people are ready to go (turn 13)"
 msgstr "Résister jusqu'à ce que vos gens soient prêts à fuir (tour 13)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:37
-#, fuzzy
-#| msgid "Resist until your people are ready to go (Turn 14)"
 msgid "Resist until your people are ready to go (turn 14)"
 msgstr "Résister jusqu'à ce que vos gens soient prêts à fuir (tour 14)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:45
-#, fuzzy
-#| msgid "Then move Kapou’e to the signpost in the Northeast"
 msgid "Then move Kapou’e to the signpost in the northeast"
 msgstr "Puis mener Kapou'e au panneau indicateur au nord-est"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:52
-#, fuzzy
-#| msgid "Move Kapou’e to the signpost in the Northeast"
 msgid "Move Kapou’e to the signpost in the northeast"
 msgstr "Mener Kapou'e au panneau indicateur au nord-est"
 
@@ -4056,8 +4046,6 @@ msgstr "Bonjour Shan Taum."
 
 #. [message]: speaker=Shan Taum
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:204
-#, fuzzy
-#| msgid "What... Kapou’e! What in the frozen northlands are you doing here?!"
 msgid "What... Kapou’e! What in the frozen Northlands are you doing here?!"
 msgstr ""
 "Quoi.. Kapou'e ! Par la terre de mes ancêtres, qu'est-ce que tu fais ici ?"
