--- a/po/wesnoth-l/fr.po
+++ b/po/wesnoth-l/fr.po
@@ -1,11 +1,12 @@
 # Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011, 2012.
 # Syll <syll-dev@laposte.net>, 2018
+# Mathieu Guilbaudl <mathieu@guim.info>, 2019
 msgid ""
 msgstr ""
 "Project-Id-Version: Liberty-1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-12-01 14:52+0100\n"
+"PO-Revision-Date: 2019-02-22 13:45+0100\n"
 "Last-Translator: Syll <syll-dev@laposte.net>\n"
 "Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
@@ -70,8 +71,6 @@ msgstr ""
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:28
-#, fuzzy
-#| msgid "(Intermediate level, 8 scenarios.)"
 msgid "(Novice level, 8 scenarios.)"
 msgstr "(Niveau intermédiaire, 8 scénarios.)"
 
