--- a/po/wesnoth-nr/fr.po
+++ b/po/wesnoth-nr/fr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Northern_Rebirth-1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-10-07 10:47+0200\n"
+"PO-Revision-Date: 2019-02-22 13:56+0100\n"
 "Last-Translator: Émile Enguehard <zerbugug@gmail.com>\n"
 "Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
@@ -130,14 +130,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
-#, fuzzy
-#| msgid ""
-#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
-#| "strong fortifications around Dwarven Doors. The people who called it "
-#| "home, dwarven and human alike, knew that the wealth of their city might "
-#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
-#| "themselves well able to fight off any bandit gang or petty warlord that "
-#| "could arise in the thinly-settled northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -2416,11 +2408,6 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:736
-#, fuzzy
-#| msgid ""
-#| "If you have no objection, Tallin, we would like to join you. These "
-#| "northlands are hardly safe these days for anyone to be traveling on their "
-#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "Northlands are hardly safe these days for anyone to be traveling on their "
@@ -3282,7 +3269,6 @@ msgstr "Laissez-moi deviner. Malifor ?"
 
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2126
-#, fuzzy
 msgid ""
 "Indeed. He was once a great sorcerer, but he coveted wealth and power. To "
 "gain his ends, he allied himself with the Lich-Lords, and from them he "
@@ -3305,12 +3291,11 @@ msgstr ""
 "s'établit dans ces mines, après toutes ces années — il a toujours eu le goût "
 "de l'or et un attrait spécial à mon égard. Il essaya de me briser, comme un "
 "esclave sans cervelle, mais je résista à son pouvoir et m'enfuis. Depuis, e "
-"me cache dans ces tunnels inondés. Dasn ces eaux, vivent des monstres que "
+"me cache dans ces tunnels inondés. Dans ces eaux, vivent des monstres que "
 "les minions de Malifor redoutent. Il ne s'en prennent pas à moi ici."
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2131
-#, fuzzy
 msgid ""
 "I am afraid times have changed much. Our first king, Haldric I, fled the "
 "Green Isle with the Wesfolk, the orcs in pursuit. He came ashore on this "
@@ -3321,7 +3306,7 @@ msgstr ""
 "est arrivé des Îles vertes avec son peuple, les orcs sur leurs talons. Il "
 "débarqua sur cette terre, que nous appelons le Grand Continent, et détruit "
 "le seigneur liche Jevyan, avant de fonder le Royaume de Wesnoth. C'était il "
-"y a plusieurs siècle."
+"y a plusieurs siècles."
 
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2136
@@ -7187,12 +7172,6 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
-#, fuzzy
-#| msgid ""
-#| "Princess, we are not seeking to do business here: <i>“I do this for you "
-#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
-#| "which will forever ensure the peace and prosperity of these northlands. "
-#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
