--- a/po/wesnoth-ei/lt.po
+++ b/po/wesnoth-ei/lt.po
@@ -1,12 +1,12 @@
-# Copyright (C) Wesnoth development team, 2007-2012.
+# Copyright (C) Wesnoth development team, 2007-2019.
 # Translators:
-#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2012.
+#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
-"PO-Revision-Date: 2017-04-08 16:04+0100\n"
+"PO-Revision-Date: 2019-01-21 23:27+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
 "Language: lt\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
 "%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
-"X-Generator: Poedit 1.8.5\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:13
@@ -72,8 +72,10 @@ msgstr ""
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:24
+#, fuzzy
+#| msgid "(Novice level, 16 scenarios.)"
 msgid "(Intermediate level, 16 scenarios.)"
-msgstr "(Vidutinis lygis, 16 scenarijų.)"
+msgstr "(Naujoko lygis, 16 scenarijų.)"
 
 #. [about]
 #: data/campaigns/Eastern_Invasion/_main.cfg:28
@@ -463,7 +465,7 @@ msgid ""
 "survive. Now, come on, we do not have much time to spare!"
 msgstr ""
 "Šis įtvirtinimas jau prarastas. Jei norime išsaugoti Vesnotą, turime "
-"nugalėti šitą blogį. O dabar eime, nebegalime švaistyti laiko."
+"nugalėti šitą blogį. O dabar eime, nebegalime švaistyti laiko!"
 
 #. [objective]: condition=win
 #: data/campaigns/Eastern_Invasion/scenarios/01_The_Outpost.cfg:436
@@ -526,14 +528,18 @@ msgstr "Kur mes? Nematau net kur žengti."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:188
+#, fuzzy
+#| msgid ""
+#| "This is an old escape route for the outpost. Unfortunately these caves "
+#| "are currently inhabited by trolls, who are blocking our path through the "
+#| "tunnel."
 msgid ""
 "This is an old escape tunnel for the outpost; unfortunately these caves are "
 "currently inhabited by trolls. Now hurry, we have to move quickly; the "
 "undead will surely follow us down here."
 msgstr ""
-"Tai senas atsitraukimo iš tvirtovės tunelis. Deja, dabar šiuose urvuose "
-"veisiasi troliai. Dabar paskubėkime, reikia sparčiai judintis, nemirėliai "
-"tikrai seks mums iš paskos."
+"Tai senas atsitraukimo iš tvirtovės kelias. Deja, dabar šiuose urvuose "
+"veisiasi troliai, kurie užblokavo mūsų taką per tunelį."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:193
@@ -601,8 +607,10 @@ msgstr "Mano klanas čia gyven’ šimtmečiais. Mūsų neišvaikys keli nemirė
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:266
+#, fuzzy
+#| msgid "Very well. I will send guides to lead you north to your allies."
 msgid "Very well. The best of luck in your battle."
-msgstr "Kaip norite. Geriausios kloties mūšyje."
+msgstr "Gerai. Pasiųsiu vedlius, kad nuvestų jus į šiaurę pas jūsiškius."
 
 #. [message]: speaker=unit
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:285
@@ -766,7 +774,7 @@ msgstr "Volesas"
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:134
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:71
 msgid "Orcs"
-msgstr ""
+msgstr "Orkai"
 
 #. [side]: type=Orcish Warrior, id=Gruga-Har
 #: data/campaigns/Eastern_Invasion/scenarios/04a_An_Elven_Alliance.cfg:80
@@ -917,7 +925,7 @@ msgid ""
 "him in his mission!"
 msgstr ""
 "Mano žudikas nebegyvas! Elfai už tai sumokės. Ne tiek už jo mirtį, kiek už "
-"sužlugdytą jo misiją."
+"sužlugdytą jo misiją!"
 
 #. [message]: speaker=Volas
 #: data/campaigns/Eastern_Invasion/scenarios/04a_An_Elven_Alliance.cfg:333
@@ -1210,7 +1218,7 @@ msgstr ""
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/04c_Mal-Ravanals_Capital.cfg:501
 msgid "You know this lich?"
-msgstr ""
+msgstr "Ar žinai šį ličą?"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/04c_Mal-Ravanals_Capital.cfg:506
@@ -1768,7 +1776,7 @@ msgstr "Žmogėdrų treniravimas"
 #. [side]
 #: data/campaigns/Eastern_Invasion/scenarios/08_Training_the_Ogres.cfg:41
 msgid "Ogres"
-msgstr ""
+msgstr "Žmogėdros"
 
 #. [objective]: condition=win
 #: data/campaigns/Eastern_Invasion/scenarios/08_Training_the_Ogres.cfg:76
@@ -1829,7 +1837,7 @@ msgstr ""
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/08_Training_the_Ogres.cfg:159
 msgid "Help!"
-msgstr ""
+msgstr "Gelbėkit!"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/08_Training_the_Ogres.cfg:203
@@ -1896,7 +1904,7 @@ msgstr "Dvarfai"
 #. [side]: type=Orcish Nightblade, id=Bagork
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:75
 msgid "Bagork"
-msgstr ""
+msgstr "Bagorkas"
 
 #. [side]: type=Elvish Avenger, id=Elandin
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:97
@@ -1998,12 +2006,12 @@ msgstr ""
 #. [message]: speaker=Bagork
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:270
 msgid "I will kill all of you!"
-msgstr ""
+msgstr "Visus jus užmušiu!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:285
 msgid "Not very likely."
-msgstr ""
+msgstr "Mažai tikėtina."
 
 #. [message]: speaker=Prok-Bak
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:296
@@ -2305,7 +2313,7 @@ msgstr "Po kiek laiko..."
 #. [message]: id=$unit.id
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:687
 msgid "So, how do I look?"
-msgstr ""
+msgstr "Na, kaip aš atrodau?"
 
 #. [message]: id=$unit.id
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:692
@@ -2332,12 +2340,12 @@ msgstr ""
 #. [message]: speaker=King Dra-Nak
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:814
 msgid "Hey! Who are you? Get her!"
-msgstr ""
+msgstr "Ei! Kas tu? Sučiupkit ją!"
 
 #. [message]: speaker=King Dra-Nak
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:821
 msgid "Hey! Who are you? Get him!"
-msgstr ""
+msgstr "Ei! Kas tu? Sučiupkit jį!"
 
 #. [message]
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:828
@@ -3052,7 +3060,7 @@ msgstr ""
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/16_Weldyn_under_Attack.cfg:324
 msgid "I will begin preparing our troops."
-msgstr ""
+msgstr "Pradėsiu ruošti mūsų karius."
 
 #. [scenario]: id=17a_The_Duel
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:4
@@ -3071,7 +3079,7 @@ msgstr "Mal-Ravanalas"
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:65
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:180
 msgid "Defeat Mal-Ravanal while Dacyn is nearby"
-msgstr "Nugalėkite Mal-Ravanalą, kol Deisynas netoliese."
+msgstr "Nugalėkite Mal-Ravanalą, kol Deisynas  yra netoliese"
 
 #. [message]: speaker=Mal-Ravanal
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:97
@@ -3192,7 +3200,7 @@ msgstr "Mal-Hadanakas"
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:273
 msgid "You dare to attack me? Now you will pay!"
-msgstr ""
+msgstr "Drįsti mane pulti? Dabar sumokėsi!"
 
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:276
@@ -3222,7 +3230,7 @@ msgstr "Mal-Akranbralas"
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:285
 msgid "You will serve me in death!"
-msgstr ""
+msgstr "Tarnausi man mirtyje!"
 
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:288
@@ -3265,6 +3273,8 @@ msgid ""
 "They killed the royal family... now, even if we save Weldyn, Wesnoth has "
 "fallen."
 msgstr ""
+"Jie nužudė karališkąją šeima... Dabar net jei išgelbėsime Veldyną, Vesnotas "
+"krito."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:692
@@ -3381,7 +3391,7 @@ msgstr ""
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:179
 msgid "I am honored, your highness."
-msgstr ""
+msgstr "Aš pagerbtas, jūsų didenybe."
 
 #. [message]: speaker=Konrad II
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:189
@@ -3481,7 +3491,7 @@ msgstr ""
 #. [unit_type]: id=Lich Lord
 #: data/campaigns/Eastern_Invasion/units/Lich_Lord.cfg:7
 msgid "Lich Lord"
-msgstr ""
+msgstr "Ličų valdovas"
 
 #. [unit_type]: id=Mounted Fighter, race=human
 #: data/campaigns/Eastern_Invasion/units/Mounted_Fighter.cfg:4
@@ -3617,7 +3627,7 @@ msgstr "Aš tave susprogdinsiu!"
 #. [message]: speaker=Grug
 #: data/campaigns/Eastern_Invasion/utils/final_battle.cfg:61
 msgid "Grug again dead make!"
-msgstr ""
+msgstr "Grugas vėl padarė mirti!"
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/utils/final_battle.cfg:76
@@ -3654,7 +3664,7 @@ msgstr ""
 msgid ""
 "Wearing this amulet will cause every blow you deal to inflict <i>arcane</i> "
 "damage!"
-msgstr "Dėvint šį amuletą, kiekvienas smūgis darys <i>paslaptingą</i> žalą."
+msgstr "Dėvint šį amuletą, kiekvienas smūgis darys <i>paslaptingą</i> žalą!"
 
 #: data/campaigns/Eastern_Invasion/utils/macros.cfg:63
 msgid "holy amulet^Take it"
