--- a/po/wesnoth-tb/lt.po
+++ b/po/wesnoth-tb/lt.po
@@ -1,13 +1,13 @@
-# Copyright (C) Wesnoth development team, 2007-2011.
+# Copyright (C) Wesnoth development team, 2007-2019.
 # Translators:
-#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2011.
+#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2019.
 #  Marius Tauba, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2017-04-08 15:52+0100\n"
+"PO-Revision-Date: 2019-02-09 00:09+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
 "Language: lt\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
 "%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
-"X-Generator: Poedit 1.8.5\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:13
@@ -63,8 +63,10 @@ msgstr ""
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:23
+#, fuzzy
+#| msgid "(Rookie level, 4 scenarios.)"
 msgid "(Novice level, 4 scenarios.)"
-msgstr "(Pradedantysis lygis, 4 scenarijai.)"
+msgstr "(Pradedančiojo lygis, 4 scenarijai.)"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:30
@@ -295,6 +297,9 @@ msgid ""
 "Use footpads as fodder to protect your loyal units and attack during the day "
 "to minimize the damage your forces take."
 msgstr ""
+"Naudokite plėšikus, kaip patrankų mėsą, kad apsaugotumėte savo ištikimus "
+"karius ir pulkite dienos metu, kad sumažintumėte žalą, kurią patirs jūsų "
+"pajėgos."
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:186
@@ -318,12 +323,6 @@ msgstr "Tu pakvietei, aš atėjau, pasitenkinkim tuo. Kas ištiko Magrę?"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:206
-#, fuzzy
-#| msgid ""
-#| "A dark mage has come upon us; his creatures call him Mordak. They have "
-#| "been terrorizing outlying farms, and we fear they may soon attack the "
-#| "village itself! The villagers of Maghre have taken up weapons but they "
-#| "are not trained fighters; but we need your men, and you to lead them."
 msgid ""
 "A dark mage has come upon us; his creatures call him Mordak. They have been "
 "terrorizing outlying farms, and we fear they may soon attack the village "
@@ -331,8 +330,8 @@ msgid ""
 "trained fighters; we need your men, and you to lead them."
 msgstr ""
 "Tamsusis magas užpuolė mus; jo sutvėrimai vadina jį Mordaku. Jie terorizuoja "
-"tolimesnes fermas, ir mes bijome, kad jie tuoj gali užpulti patį kaimą! "
-"Magrės gyventojai pakėlė ginklus, bet jie nėra treniruoti kariai; todėl mums "
+"tolimesnius ūkius, ir mes bijome, kad jie tuoj gali užpulti patį kaimą! "
+"Magrės gyventojai pakėlė ginklus, bet jie nėra treniruoti kariai; mums "
 "reikia tavo vyrų ir tavęs, kad juos vestum."
 
 #. [message]: speaker=Baran
@@ -559,7 +558,7 @@ msgstr "Muff Toras"
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:261
 msgid "Fight your way through the woods before the kidnappers escape"
-msgstr "Prasiskinkite kelią per miškus kol pagrobėjai nepaspruko."
+msgstr "Prasiskinkite kelią per miškus kol pagrobėjai nepaspruko"
 
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:278
@@ -577,6 +576,8 @@ msgid ""
 "The Elvish forces are spread out. Seek to fight them one at a time with "
 "several of your units."
 msgstr ""
+"Elfų pajėgos yra išsisklaidžiusios. Stenkis vienu metu kovoti su keliais "
+"savo kariais prieš vieną jų karį."
 
 #. [objectives]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:317
@@ -584,12 +585,16 @@ msgid ""
 "Use horsemen or footpads to quickly explore the shrouded woods to locate the "
 "kidnappers."
 msgstr ""
+"Greitai ištyrinėk miškus naudoda raitelius ar plėšikus, kad rastumėte "
+"pagrobėjus."
 
 #. [objectives]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:332
 msgid ""
 "Separate the Dark Adept from his guards and attack in force for an easy kill."
 msgstr ""
+"Atskirkite tamsos žinovą nuo jo sargybinių ir pulkite visa jėga, jei norite "
+"lengvai nugalėti."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:375
@@ -898,7 +903,7 @@ msgstr ""
 "pradėjo. Vis dar negaliu patikėti tuo, kas įvyko; iki šiol vis sugebėdavom "
 "kažkaip išsisukti.\n"
 "\n"
-"Tikėjomės pristatyti magą Tairachui, mainais į mūsų gyvybes. Nežinau kodėl "
+"Tikėjomės pristatyti magą Tairačui, mainais į mūsų gyvybes. Nežinau kodėl "
 "karžygiui prireikė šito vyro, bet aprašymą jis atitinka. Manau, Mordako "
 "planas būtų puikiai pavykęs, jeigu ne tų raitelių pasirodymas. Dabar jie "
 "atjoja čia, vedami vyro, kuris, pasak gandų, yra šito mago brolis. Jeigu tai "
@@ -995,6 +1000,8 @@ msgid ""
 "When facing an unknown situation, take into account details from story and "
 "dialog to inform your strategy."
 msgstr ""
+"Kai susiduriate su nežinoma situacija, atkreipkite dėmesį į pasakojimo "
+"detales ir dialogą, kad tinkamai pasirinktumėte strategiją."
 
 #. [objectives]
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:337
@@ -1002,6 +1009,8 @@ msgid ""
 "The dark sorcerer is a strong unit; attack him with multiple units at once "
 "and try to force him off his keep."
 msgstr ""
+"Tamsos žinovas yra stiprus karys; pulkite jį su keliais kariais vienu metu "
+"ir pabandykite jį išstumti iš jo bokšto."
 
 #. [objectives]
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:347
@@ -1009,6 +1018,8 @@ msgid ""
 "Markings or decorations on hexes may indicate something to be found. If you "
 "can, it is usually a good idea to investigate."
 msgstr ""
+"Paženklinimai ar dekoracijos laukeliuose gali reikšti, kad ten kažkas gali "
+"būti rasta. Jei gali, paprastai yra verta ištirti."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:384
@@ -1231,7 +1242,7 @@ msgstr ""
 msgid ""
 "I have already met, and killed, the sorcerer. Is this the key to which you "
 "referred?"
-msgstr ""
+msgstr "Jau sutikau ir užmušiau magą.  Ar tai raktas, kurį paminėjai?"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:835
@@ -1239,6 +1250,8 @@ msgid ""
 "Yes, it is. Come, unlock this cell door, and let us depart this place, "
 "brother!"
 msgstr ""
+"Taip. Ateik, atrakink vienutės duris, ir tada kartu išvyksime iš šios "
+"vietos, broli!"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:889
@@ -1285,7 +1298,7 @@ msgstr "Ačiū, kad atėjai į pagalbą. Grįžkime į kaimą."
 #. [unit]: id=Rotharik, type=Orcish Assassin
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:948
 msgid "Minion of Tairach"
-msgstr ""
+msgstr "Tairačo pakalikas"
 
 #. [message]: speaker=Rotharik
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:960
@@ -1330,8 +1343,8 @@ msgstr ""
 "baimės mirti, ar dar blogiau... Bet pasitraukus šitiems vargams, susidūriau "
 "su ne ką lengvesniu uždaviniu — kaip atsidėkosiu broliui.\n"
 "\n"
-"Kai Arvitas išlaisvino mane iš celės, jis jau buvo beveik viską atleidęs. Ir "
-"visgi, užtrukom visą praeitą savaitę, kol atgaivinom ankstesnį tarpusavio "
+"Kai Arvitas išlaisvino mane iš vienutės, jis jau buvo beveik viską atleidęs. "
+"Ir visgi, užtrukom visą praeitą savaitę, kol atgaivinom ankstesnį tarpusavio "
 "pasitikėjimą. Mums pasisekė, kad turėjom daug laiko pakeliui atgal — Pilkąją "
 "girią aplenkėm dideliu lanku, o kelias aplinkui ėjo per labai gražias "
 "apylinkes. Tai suteikė mums daugybę laiko pokalbiams."
@@ -1396,6 +1409,8 @@ msgid ""
 "Recruit or Recall some high-move units to be able to see as far as possible "
 "through the fog for approaching units."
 msgstr ""
+"Pasamdykite ar grąžinkit toli judančius karius, kad rūke matytumėte "
+"besiartinančius karius iš kaip galima toliau."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:171
@@ -1502,6 +1517,8 @@ msgstr "Užmuškite orkų karžygį ir išlaisvinkite kaimą"
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:300
 msgid "You can use Reeve Hoban’s keep to recruit or recall additional units."
 msgstr ""
+"Galite naudoti Ryvo Hobano bokštą, kad pasamdytumėte ar grąžintumėte "
+"papildomų karių."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:310
@@ -1619,4 +1636,7 @@ msgstr "Barenas"
 
 #: data/campaigns/Two_Brothers/utils/macros.cfg:4
 msgid "Hint:"
-msgstr ""
+msgstr "Patarimas:"
+
+#~ msgid "It may be important, I best take it."
+#~ msgstr "Jis gali būti svarbus, geriau jį paimsiu."
